docs: 优化JVM参数配置，补充垃圾收集器调优及日志打印，增强OOM异常处理。